1. ingress-controller/ingress-eample.yaml
# NOT TO BE APPLIED, JUST AN EXAMPLE ON HOW TO CREATE AN INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx" # or any other ingresses
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
